--- a/client.html
+++ b/client.html
@@ -1,147 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Психологическая поликлиника - Для клиентов</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Document</title>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="logo">
-                <h1>Психологическая поликлиника</h1>
-            </div>
-            <nav class="nav">
-                <ul>
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="client.html" class="active">Для клиентов</a></li>
-                    <li><a href="staff.html">Для психологов</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <main class="main">
-        <section class="page-header">
-            <div class="container">
-                <h2>Информация для клиентов</h2>
-                <p>Здесь вы можете найти всю необходимую информацию о наших услугах и записаться на прием</p>
-            </div>
-        </section>
-
-        <section class="booking-form">
-            <div class="container">
-                <h3>Записаться на прием</h3>
-                <form id="bookingForm" class="form">
-                    <div class="form-group">
-                        <label for="name">Имя:</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">Телефон:</label>
-                        <input type="tel" id="phone" name="phone" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="service">Тип услуги:</label>
-                        <select id="service" name="service" required>
-                            <option value="">Выберите услугу</option>
-                            <option value="individual">Индивидуальная терапия</option>
-                            <option value="family">Семейная терапия</option>
-                            <option value="group">Групповая терапия</option>
-                            <option value="consultation">Консультация</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="date">Предпочтительная дата:</label>
-                        <input type="date" id="date" name="date" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="time">Предпочтительное время:</label>
-                        <select id="time" name="time" required>
-                            <option value="">Выберите время</option>
-                            <option value="09:00">09:00</option>
-                            <option value="10:00">10:00</option>
-                            <option value="11:00">11:00</option>
-                            <option value="12:00">12:00</option>
-                            <option value="14:00">14:00</option>
-                            <option value="15:00">15:00</option>
-                            <option value="16:00">16:00</option>
-                            <option value="17:00">17:00</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Дополнительная информация:</label>
-                        <textarea id="message" name="message" rows="4"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Записаться на прием</button>
-                </form>
-            </div>
-        </section>
-
-        <section class="psychologists">
-            <div class="container">
-                <h3>Наши психологи</h3>
-                <div class="psychologists-grid">
-                    <div class="psychologist-card">
-                        <div class="psychologist-photo"></div>
-                        <h4>Анна Иванова</h4>
-                        <p class="specialty">Семейный психолог</p>
-                        <p class="experience">Опыт работы: 10 лет</p>
-                        <p class="description">Специализируется на семейной терапии и работе с подростками</p>
-                    </div>
-                    <div class="psychologist-card">
-                        <div class="psychologist-photo"></div>
-                        <h4>Михаил Петров</h4>
-                        <p class="specialty">Клинический психолог</p>
-                        <p class="experience">Опыт работы: 8 лет</p>
-                        <p class="description">Работает с тревожными расстройствами и депрессией</p>
-                    </div>
-                    <div class="psychologist-card">
-                        <div class="psychologist-photo"></div>
-                        <h4>Елена Смирнова</h4>
-                        <p class="specialty">Детский психолог</p>
-                        <p class="experience">Опыт работы: 12 лет</p>
-                        <p class="description">Специализируется на работе с детьми и подростками</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="pricing">
-            <div class="container">
-                <h3>Стоимость услуг</h3>
-                <div class="pricing-grid">
-                    <div class="price-card">
-                        <h4>Индивидуальная консультация</h4>
-                        <div class="price">3000 ₽</div>
-                        <p>50 минут</p>
-                    </div>
-                    <div class="price-card">
-                        <h4>Семейная терапия</h4>
-                        <div class="price">4000 ₽</div>
-                        <p>60 минут</p>
-                    </div>
-                    <div class="price-card">
-                        <h4>Групповая терапия</h4>
-                        <div class="price">1500 ₽</div>
-                        <p>90 минут</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 Психологическая поликлиника. Все права защищены.</p>
-        </div>
-    </footer>
-
-    <script src="js/script.js"></script>
+    
 </body>
 </html>
