Додела блог с услугами Сделал блок со скидкой и блок о заботах

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Психологическая поликлиника - Главная</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/png" href="/images/favicon.ico">
 </head>
 <body>
     <header class="header">
@@ -18,7 +19,7 @@
                 <div class="header-center">
                     <div class="logo">
                         <a href="index.html" class="logo-link" aria-label="Главная">
-                            <img src="http://www.w3.org/2000/svg" alt="Лого" style="height:48px;">
+                            <img src="/images/logo.svg" alt="Лого" style="height:48px;">
                         </a>
                     </div>
                 </div>
@@ -66,8 +67,7 @@
                         <div class="eyebrow">Сервис психотерапии</div>
                         <h1 class="hero-title">
                             Консультации
-                            <br />
-                            с психологом онлайн:
+                            <br> с психологом онлайн:
                             <br />
                             <span class="hero-title-secondary">обрести счастье</span>
                         </h1>
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="services-row services-row--psychologists">
-                <div class="services-card">
+                <div class="services-card extra-class">
                     <h3 class="services-card-title">Для психологов</h3>
                     <span class="services-subtitle">На нашей платформе вы:</span>
                     <ul class="services-list">
@@ -174,6 +174,54 @@
             </div>
         </div>
      </section>
+
+
+     <section class="promo">
+        <div class="promo-container">
+            <span class="promo-title"><span class="promo-title discount">50% скидки </span>на первую консультацию</span>
+            <p class="promo-desc">
+                Вы можете получить скидку на первую консультацию у любого психолога
+            </p>
+            <button class="promo-deadline-btn">Акция действительна <br> до 00.00.0000</button>
+            <button class="promo-select-btn">Выбрать специалиста</button>
+        </div>
+     </section>
+
+
+     <section class="benefits-section">
+        <div class="container benefits-container">
+            <h2 class="benefits-title">C заботой о наших клиентах</h2>
+            <div class="benefits-list">
+                <div class="benefit-item">
+                    <img class="benefit-img" src="/images/logo.svg" alt="Картинка о преймуществах">
+                    <p class="benefit-text">Можно анонимно <br> и без регистрации</p>
+                </div>
+                <div class="benefit-item">
+                    <img class="benefit-img" src="" alt="Картинка о преймуществах">
+                    <p class="benefit-text">Онлайн или очно</p>
+                </div>
+                <div class="benefit-item">
+                    <img class="benefit-img" src="" alt="Картинка о преймуществах">
+                    <p class="benefit-text">От 500 ₽ за консультацию</p>
+                </div>
+                <div class="benefit-item">
+                    <img class="benefit-img" src="" alt="Картинка о преймуществах">
+                    <p class="benefit-text">Поддержка 24/7</p>
+                </div>
+                <div class="benefit-item">
+                    <img class="benefit-img" src="" alt="Картинка о преймуществах">
+                    <p class="benefit-text">Быстрый и удобный поиск</p>
+                </div>
+                <div class="benefit-item">
+                    <img class="benefit-img" src="" alt="Картинка о преймуществах">
+                    <p class="benefit-text">Общение на прямую <br> с психологом</p>
+                </div>
+            </div>
+        </div>
+     </section>
+
+
+
        
     </main>
 
