Добавил блоги и faq

--- a/index.html
+++ b/index.html
@@ -381,14 +381,160 @@
      </section>
 
 
+     <section class="blog-section"> 
+        <div class="container blog-container">
+            <div class="blog-header">
+                <h2 class="blog-title">У нас есть блок</h2>
+                <span class="blog-subtitle">Полезные советы и идеи для личностного роста</span>
+            </div>
+
+            <div class="blog-content">
+                <ul class="blog-list">
+                    <li class="blog-list-item">
+                        <article class="blog-card">
+                            <div class="blog-card-left">
+                                <h3 class="blog-card-title">Название статьи</h3>
+                                <p class="blog-card-excerpt">Краткая информация о статье lorem</p>
+                                <button class="blog-card-button" type="button">Читать статью</button>
+                            </div>
+                            <div class="blog-card-media" aria-hidden="true">
+                                <svg class="blog-card-media-icon" width="72" height="56" viewBox="0 0 72 56" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                                    <path d="M45 14H54C56.7614 14 59 16.2386 59 19V41C59 43.7614 56.7614 46 54 46H18C15.2386 46 13 43.7614 13 41V19C13 16.2386 15.2386 14 18 14H27L30 10H42L45 14Z" stroke="white" stroke-width="2"/>
+                                    <circle cx="36" cy="30" r="9" stroke="white" stroke-width="2"/>
+                                </svg>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="blog-list-item">
+                        <article class="blog-card">
+                            <div class="blog-card-left">
+                                <h3 class="blog-card-title">Название статьи</h3>
+                                <p class="blog-card-excerpt">Краткая информация о статье</p>
+                                <button class="blog-card-button" type="button">Читать статью</button>
+                            </div>
+                            <div class="blog-card-media" aria-hidden="true">
+                                <svg class="blog-card-media-icon" width="72" height="56" viewBox="0 0 72 56" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                                    <path d="M45 14H54C56.7614 14 59 16.2386 59 19V41C59 43.7614 56.7614 46 54 46H18C15.2386 46 13 43.7614 13 41V19C13 16.2386 15.2386 14 18 14H27L30 10H42L45 14Z" stroke="white" stroke-width="2"/>
+                                    <circle cx="36" cy="30" r="9" stroke="white" stroke-width="2"/>
+                                </svg>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="blog-list-item">
+                        <article class="blog-card">
+                            <div class="blog-card-left">
+                                <h3 class="blog-card-title">Название статьи</h3>
+                                <p class="blog-card-excerpt">Краткая информация о статье</p>
+                                <button class="blog-card-button" type="button">Читать статью</button>
+                            </div>
+                            <div class="blog-card-media" aria-hidden="true">
+                                <svg class="blog-card-media-icon" width="72" height="56" viewBox="0 0 72 56" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                                    <path d="M45 14H54C56.7614 14 59 16.2386 59 19V41C59 43.7614 56.7614 46 54 46H18C15.2386 46 13 43.7614 13 41V19C13 16.2386 15.2386 14 18 14H27L30 10H42L45 14Z" stroke="white" stroke-width="2"/>
+                                    <circle cx="36" cy="30" r="9" stroke="white" stroke-width="2"/>
+                                </svg>
+                            </div>
+                        </article>
+                    </li>
+                </ul>
+                <button class="blog-more-btn">Перейти в блог</button>
+            </div>
+        </div>
+     </section>
+
+
+     <section class="faq-section">
+        <div class="container faq-container">
+            <div class="faq-top">
+                <h2 class="faq-title">Ответы на частые вопросы</h2>
+                <div class="faq-topics" data-faq-topics>
+                    <button class="faq-topic active" type="button">
+                        <span class="faq-topic-icon" aria-hidden="true">
+                            <svg width="56" height="44" viewBox="0 0 72 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M45 14H54C56.7614 14 59 16.2386 59 19V41C59 43.7614 56.7614 46 54 46H18C15.2386 46 13 43.7614 13 41V19C13 16.2386 15.2386 14 18 14H27L30 10H42L45 14Z" stroke="#9E9E9E" stroke-width="2"/>
+                                <circle cx="36" cy="30" r="9" stroke="#9E9E9E" stroke-width="2"/>
+                            </svg>
+                        </span>
+                        <span class="faq-topic-label">Специалисты</span>
+                    </button>
+                    <button class="faq-topic" type="button">
+                        <span class="faq-topic-icon" aria-hidden="true">
+                            <svg width="56" height="44" viewBox="0 0 72 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M45 14H54C56.7614 14 59 16.2386 59 19V41C59 43.7614 56.7614 46 54 46H18C15.2386 46 13 43.7614 13 41V19C13 16.2386 15.2386 14 18 14H27L30 10H42L45 14Z" stroke="#9E9E9E" stroke-width="2"/>
+                                <circle cx="36" cy="30" r="9" stroke="#9E9E9E" stroke-width="2"/>
+                            </svg>
+                        </span>
+                        <span class="faq-topic-label">Конфиденциальность</span>
+                    </button>
+                    <button class="faq-topic" type="button">
+                        <span class="faq-topic-icon" aria-hidden="true">
+                            <svg width="56" height="44" viewBox="0 0 72 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M45 14H54C56.7614 14 59 16.2386 59 19V41C59 43.7614 56.7614 46 54 46H18C15.2386 46 13 43.7614 13 41V19C13 16.2386 15.2386 14 18 14H27L30 10H42L45 14Z" stroke="#9E9E9E" stroke-width="2"/>
+                                <circle cx="36" cy="30" r="9" stroke="#9E9E9E" stroke-width="2"/>
+                            </svg>
+                        </span>
+                        <span class="faq-topic-label">После терапии</span>
+                    </button>
+                </div>
+            </div>
+            <div class="faq-accordion" data-faq-accordion>
+                <div class="faq-item">
+                    <button class="faq-question" type="button">
+                        <span>Как понять, что мне нужна помощь психолога?</span>
+                        <span class="faq-chevron" aria-hidden="true"></span>
+                    </button>
+                    <div class="faq-answer" hidden>
+                        <div class="faq-answer-inner">
+                            <p>Потребность в поддержке может проявляться как длительное чувство тревоги, выгорания, нарушения сна или сложности в отношениях.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <button class="faq-question" type="button">
+                        <span>Как выбрать “своего” психолога?</span>
+                        <span class="faq-chevron" aria-hidden="true"></span>
+                    </button>
+                    <div class="faq-answer" hidden>
+                        <div class="faq-answer-inner">
+                            <p>Ориентируйтесь на запрос, опыт специалиста и ваше ощущение комфорта на первой встрече. Мы поможем подобрать подходящего.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="faq-item open">
+                    <button class="faq-question" type="button" aria-expanded="true">
+                        <span>Сколько времени обычно требуется на терапию и как часто нужно встречаться?</span>
+                        <span class="faq-chevron" aria-hidden="true"></span>
+                    </button>
+                    <div class="faq-answer">
+                        <div class="faq-answer-inner">
+                            <p>Длительность курса зависит от целей и индивидуальных особенностей. Часто встречи проходят 1–2 раза в неделю.</p>
+                            <p>Обсуждайте ожидания и прогресс с терапевтом, чтобы подобрать оптимальный график.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <button class="faq-question" type="button">
+                        <span>Как можно подготовиться к встрече с психологом?</span>
+                        <span class="faq-chevron" aria-hidden="true"></span>
+                    </button>
+                    <div class="faq-answer" hidden>
+                        <div class="faq-answer-inner">
+                            <p>Сформулируйте основные вопросы и темы, о которых хотите поговорить, и выберите спокойное место для онлайн-встречи.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+
+
        
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <p>&copy; 2024 Психологическая поликлиника. Все права защищены.</p>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="js/script.js"></script>
 </body>
