--- a/index.html
+++ b/index.html
@@ -57,24 +57,74 @@
                             </svg>
                         </a>
                     </div>
-                    <button class="login-btn" onclick="showModal()">Войти</button>
                     <button class="mobile-menu-toggle" aria-label="Открыть меню">
                         <span></span>
                         <span></span>
                         <span></span>
                         <span></span>
                     </button>
+                    <button class="login-btn" onclick="showModal()">Войти</button>
                 </div>
             </div>
         </div>
     </header>
 
+    <nav class="mobile-nav" id="mobileNav">
+        <div class="mobile-nav__backdrop" id="mobileBackdrop"></div>
+        <div class="mobile-nav__panel">
+
+            <div class="mobile-panel-header">
+                <img src="/images/logo.svg" alt="Лого" style="height:48px;">
+                <button class="mobile-nav__close" id="mobileClose" aria-label="Закрыть панель">
+                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="30" cy="30" r="30" fill="#9AC355"></circle>
+                        <path d="M35 40L24 29.5L35 19" stroke="white" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                </button>
+            </div>
+      
+          <ul class="mobile-nav__list">
+            <li><a href="client.html">Выбор психолога</a></li>
+            <li><a href="staff.html">Психологам</a></li>
+            <li><a href="#">Блог</a></li>
+            <li><a href="#">Группы</a></li>
+            <li><a href="#">Организации</a></li>
+            <li><a href="#">Избранное</a></li>
+          </ul>
+      
+          <div class="mobile-nav__socials">
+            <a href="mailto:info@example.com" class="icon-link" aria-label="Почта">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z" stroke="#9AC355" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <polyline points="22,6 12,13 2,6" stroke="#9AC355" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </a>
+            <a href="#" class="icon-link" aria-label="Телеграм">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9.78 18.65L10.06 14.42L17.74 7.5C18.08 7.19 17.67 7.04 17.22 7.31L7.74 13.3L3.64 12C2.76 11.75 2.75 11.14 3.84 10.7L19.81 4.54C20.54 4.21 21.24 4.72 20.96 5.84L18.24 18.65C18.05 19.56 17.5 19.78 16.74 19.36L12.6 16.3L10.61 18.23C10.38 18.46 10.19 18.65 9.78 18.65Z" fill="#9AC355"/>
+                </svg>
+            </a>
+            <a href="#" class="icon-link" aria-label="WhatsApp">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.885 3.488" fill="#9AC355"/>
+                </svg>
+            </a>
+            <a href="#" class="icon-link" aria-label="YouTube">
+                <svg width="20" height="20" viewBox="0 0 30 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11.8906 9.66699L21.224 15.5003L11.8906 21.3337V9.66699Z" fill="#9AC355"/>
+                    <path d="M15 3.8335C29 3.8335 29 3.8335 29 15.5002C29 27.1668 29 27.1668 15 27.1668C1 27.1668 1 27.1668 1 15.5002C1 3.8335 1 3.8335 15 3.8335Z" stroke="#9AC355" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </a>
+          </div>
+        </div>
+      </nav>
+
+
+
+
     <main class="main">
         <section class="hero">
             <div class="container">
-
-
-
                 <div id="loginModal" class="login-modal">
                     <div class="login-modal-content">
                         <div class="login-top-header">
@@ -124,39 +174,48 @@
 
                 <div class="hero-grid">
                     <div class="hero-left">
-                        <div class="eyebrow">Сервис психотерапии</div>
-                        <h1 class="hero-title">
-                            Консультации
-                            <br> с психологом онлайн:
-                            <br />
-                            <span class="hero-title-secondary">обрести счастье</span>
-                        </h1>
-                        <div class="tabs-header">
-                            <button class="tab-btn active" data-tab="client">Для клиента</button>
-                            <button class="tab-btn" data-tab="psychologist">Для психолога</button>
-                        </div>
-                        <div class="hero-tabs">
-                            <div class="tabs-panel active" id="client">
-                                <div class="tabs-feature">
-                                    <h3 class="tabs-title">Проверенные специалисты</h3>
-                                    <p class="tabs-sub">120+ психологов</p>
-                                </div>
-                                <div class="tabs-feature">
-                                    <h3 class="tabs-title">Удобный график сессий</h3>
-                                    <p class="tabs-sub">Сами выбираете удобное для вас время</p>
-                                </div>
-                                <button class="tabs-cta btn">Подобрать психолога</button>
+                        <div class="hero-left-text"">
+                            <div>
+                                <span class="eyebrow">Сервис психотерапии</span>
+                                <h1 class="hero-title">
+                                    Консультации
+                                    <br> с психологом онлайн:
+                                    <br />
+                                    <span class="hero-title-secondary hero-title--desktop">обрети счастье</span>
+                                </h1>
                             </div>
-                            <div class="tabs-panel" id="psychologist" hidden>
-                                <div class="tabs-feature">
-                                    <h3 class="tabs-title">Присоединяйтесь к нашей команде</h3>
-                                    <p class="tabs-sub">Работайте с клиентами онлайн</p>
+                            <div class="hero-title-placeholder">
+                                <span class="hero-title-secondary hero-title--tablet">обрети счастье</span>
+                            </div>
+                        </div>
+                        <div class="main-tabs">
+                            <div class="tabs-header">
+                                <button class="tab-btn active" data-tab="client">Для клиента</button>
+                                <button class="tab-btn" data-tab="psychologist">Для психолога</button>
+                            </div>
+                            <div class="hero-tabs">
+                                <div class="tabs-panel active" id="client">
+                                    <div class="tabs-feature">
+                                        <h3 class="tabs-title">Проверенные специалисты</h3>
+                                        <p class="tabs-sub">120+ психологов</p>
+                                    </div>
+                                    <div class="tabs-feature">
+                                        <h3 class="tabs-title">Удобный график сессий</h3>
+                                        <p class="tabs-sub">Сами выбираете удобное для вас время</p>
+                                    </div>
+                                    <button class="tabs-cta btn">Подобрать психолога</button>
                                 </div>
-                                <div class="tabs-feature">
-                                    <h3 class="tabs-title">Гибкий график работы</h3>
-                                    <p class="tabs-sub">Выбирайте удобное время для сессий</p>
+                                <div class="tabs-panel" id="psychologist" hidden>
+                                    <div class="tabs-feature">
+                                        <h3 class="tabs-title">Присоединяйтесь к нашей команде</h3>
+                                        <p class="tabs-sub">Работайте с клиентами онлайн</p>
+                                    </div>
+                                    <div class="tabs-feature">
+                                        <h3 class="tabs-title">Гибкий график работы</h3>
+                                        <p class="tabs-sub">Выбирайте удобное время для сессий</p>
+                                    </div>
+                                    <button class="tabs-cta btn">Стать психологом</button>
                                 </div>
-                                <button class="tabs-cta btn">Стать психологом</button>
                             </div>
                         </div>
                     </div>
