Сделал новую страницу + адаптив для обеих допилил

--- a/staff.html
+++ b/staff.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Psypolyclinic - онлайн платформа для консультаций. Страница клиента.">
+    <meta name="keywords" content="психолог онлайн, психологическая помощь, консультация психолога, психотерапия">
+    <title>Психологам</title>
+    <link rel="stylesheet" href="css/client.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
+      
     
 </body>
 </html>
